--- a/app/src/main/res/layout/activity_advance_calc.xml
+++ b/app/src/main/res/layout/activity_advance_calc.xml
@@ -13,31 +13,31 @@
         android:layout_height="42dp"
         android:layout_marginLeft="8dp"
         android:gravity="center"
-        android:text="TextView"
+        android:text="FIRST"
         android:textAppearance="@android:style/TextAppearance.DeviceDefault.Large"
         android:textSize="20sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/etFirst"
         app:layout_constraintLeft_toLeftOf="parent"
-        tools:text="FIRST"/>
+        android:layout_marginStart="8dp"/>
 
     <EditText
         android:id="@+id/etFirst"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="0dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Enter first value"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="@+id/textView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toRightOf="@+id/textView"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        />
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
     <TextView
         android:id="@+id/textView4"
@@ -51,7 +51,8 @@
         android:textSize="20sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        tools:text="SECOND"/>
+        tools:text="SECOND"
+        android:layout_marginStart="8dp"/>
 
     <EditText
         android:id="@+id/etSecond"
@@ -61,14 +62,16 @@
         android:layout_marginRight="8dp"
         android:ems="10"
         android:hint="Enter second value"
-        android:inputType="textPersonName"
+        android:inputType="number"
         android:textSize="20sp"
         app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
         app:layout_constraintLeft_toRightOf="@+id/textView4"
-        app:layout_constraintRight_toRightOf="parent"/>
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
 
     <Button
-        android:id="@+id/bCalc"
+        android:id="@+id/bCalculate"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
@@ -77,20 +80,21 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
+        app:layout_constraintTop_toBottomOf="@+id/spinner"/>
 
     <RadioGroup
         android:id="@+id/radioGroup"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"
         android:paddingLeft="20dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/etSecond">
+        app:layout_constraintTop_toBottomOf="@+id/etSecond"
+        android:layout_marginStart="8dp">
 
         <RadioButton
             android:id="@+id/rbAdd"
@@ -130,6 +134,24 @@
 
     </RadioGroup>
 
+    <CheckBox
+        android:id="@+id/cbFloatingDiv"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_weight="1.26"
+        android:checked="false"
+        android:text="Floating Division"
+        android:enabled="false"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toRightOf="@+id/radioGroup"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/spinner"/>
+
     <TextView
         android:id="@+id/tvResult"
         android:layout_width="0dp"
@@ -145,6 +167,24 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bCalc"/>
+        app:layout_constraintTop_toBottomOf="@+id/bCalculate"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="0.0"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"/>
+
+    <Spinner
+        android:id="@+id/spinner"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:entries="@array/actions"
+        android:spinnerMode="dialog"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/radioGroup"/>
 
 </android.support.constraint.ConstraintLayout>
