--- a/app/src/main/res/layout/activity_simple_interest.xml
+++ b/app/src/main/res/layout/activity_simple_interest.xml
@@ -89,7 +89,7 @@
         app:layout_constraintTop_toBottomOf="@+id/etRate"/>
 
     <Button
-        android:id="@+id/bCalc"
+        android:id="@+id/bOK"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="8dp"
