DYNAMIC FRAGMENT implementation

--- a/app/src/main/res/layout/fragment_blank.xml
+++ b/app/src/main/res/layout/fragment_blank.xml
@@ -3,7 +3,7 @@
                                              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="shantanu.summertraining.BlankFragment"
+             tools:context="shantanu.summertraining.Fragments.BlankFragment"
             tools:showIn="@layout/activity_containing_fragment">
 
     <!-- TODO: Update blank fragment layout -->
