--- a/app/src/main/res/layout/activity_dynamic.xml
+++ b/app/src/main/res/layout/activity_dynamic.xml
@@ -5,21 +5,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="shantanu.summertraining.ActivityContainingFragment">
+    tools:context="shantanu.summertraining.DynamicActivity">
 
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="shantanu.summertraining.Fragments.BlankFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+    <FrameLayout
+        android:id="@+id/frameLayout"
+        android:layout_width="368dp"
+        android:layout_height="495dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="8dp"
-        android:layout_marginRight="8dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        tools:layout="@layout/fragment_blank"/>
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent">
+
+
+
+    </FrameLayout>
+
 </android.support.constraint.ConstraintLayout>
